[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-socket"
version = "0.0.1"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux"]
license-file = "../LICENSE-MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink sockets, with optional integration with mio and tokio"

[dependencies]
libc = "0.2.42"
log = "0.4.3"

[dependencies.futures]
optional = true
version = "0.1.22"

[dependencies.mio]
optional = true
version = "0.6.15"

[dependencies.tokio-reactor]
optional = true
version = "0.1.2"

[features]
default = []
mio_support = ["mio"]
tokio_support = ["mio_support", "tokio-reactor", "futures"]
