[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-sys"
version = "0.5.0"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink sockets, with optional integration with tokio"

[dependencies]
libc = "0.2.66"
log = "0.4.8"

[dependencies.futures]
optional = true
version = "0.3.1"

[dependencies.tokio]
optional = true
version = "1.0.1"
default-features = false
# We only depend on tokio for PollEvented
features = ["net"]

[dependencies.async-io]
optional = true
version = "1.1"

[features]
default = []
tokio_socket = ["tokio", "futures"]
smol_socket = ["async-io"]


[dev-dependencies]
netlink-packet-audit = { path = "../netlink-packet-audit" }

[dev-dependencies.tokio]
version = "1.0.1"
default-features = false
# We only depend on tokio for PollEvented
features = ["net", "macros", "rt-multi-thread"]

[[example]]
name = "audit_events"

[[example]]
name = "audit_events_async"
required-features = ["tokio_socket"]
