[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-sys"
version = "0.6.0"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink sockets, with optional integration with tokio"

[dependencies]
libc = "0.2.66"
log = "0.4.8"

[dependencies.futures]
optional = true
version = "0.3.1"

[dependencies.tokio]
optional = true
version = "1.0.1"
default-features = false
# We only depend on tokio for PollEvented
features = ["net"]

[dependencies.async-io]
optional = true
version = "1.3"

[features]
default = []
tokio_socket = ["tokio", "futures"]
smol_socket = ["async-io"]
async_std_socket = ["async-std","smol_socket"]


[dependencies.async-std]
optional = true
version = "1.9.0"
default-features = false
features = ["attributes"]

[dev-dependencies]
netlink-packet-audit = { path = "../netlink-packet-audit" }

[dev-dependencies.tokio]
version = "1.0.1"
default-features = false
# We only depend on tokio for PollEvented
features = ["net", "macros", "rt-multi-thread"]

[dev-dependencies.async-std]
version = "1.9.0"
features = ["attributes"]


[[example]]
name = "audit_events"

[[example]]
name = "audit_events_tokio"
required-features = ["tokio_socket"]

[[example]]
name = "audit_events_async_std"
required-features = ["async_std_socket"]
