[package]
name = "rtnetlink"
version = "0.2.2"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "manipulate linux networking resources via netlink"

[dependencies]
futures = "0.3.1"
log = "0.4.8"
failure = "0.1.6"
netlink-packet-route = { path = "../netlink-packet-route", version = "0.2"}
netlink-proto = { path = "../netlink-proto", version = "0.2" }

[dev-dependencies]
env_logger = "0.7.1"
ipnetwork = "0.15.1"
tokio = { version = "0.2.6", features = ["macros", "rt-core"] }
