[package]
name = "taskstats"
version = "0.1.0"
edition = "2021"
authors = ["Michael Hupfer <michael.hupfer@aox.de>"]
license = "MIT"
description = "Library for handling of Linux task statitisc information"
keywords = ["taskstats"]
categories = ["netlink", "Linux"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-packet-generic = { version = "0.3.1", path = "../netlink-packet-generic" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }
libc = "0.2.86"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.44"
byteorder = "1.4.3"
