[package]
name = "xfrmnetlink"
version = "0.1.0"
authors = ["Scott Zuk <zooknotic@proton.me>"]
edition = "2018"

homepage = "https://github.com/zooknotic/netlink-packet-xfrm"
keywords = ["netlink", "ip", "linux", "ipsec"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/zooknotic/netlink-packet-xfrm"
description = "manipulate linux IPsec tunnels via netlink"

[features]
test_as_root = []
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket", "async-global-executor"]

[dependencies]
futures = "0.3.11"
thiserror = "1"
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
netlink-packet-xfrm = { version = "0.1.0", path = "../netlink-packet-xfrm" }
netlink-proto = { default-features = false, version = "0.10", path = "../netlink-proto" }
tokio = { version = "1.0.1", features = ["rt"], optional = true}
async-global-executor = { version = "2.0.2", optional = true }

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
async-std = { version = "1.9.0", features = ["attributes"]}
ipnet = { version = "2" }
